metrics push logs needs to take either a target or a hash of regions

--- a/chef/cookbooks/persona-webhead/templates/default/usr/local/bin/push_bid_metrics_logs.sh.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/usr/local/bin/push_bid_metrics_logs.sh.erb
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-if scp -o StrictHostKeyChecking=no /opt/bid_metrics/queue/* <%= node[:persona][:webhead][:metrics][:server][node[:aws_region]] %>:/opt/bid_metrics/incoming/; then
+if scp -o StrictHostKeyChecking=no /opt/bid_metrics/queue/* <%= @server %>:/opt/bid_metrics/incoming/; then
   # scp push was successful
   rm -v -f /opt/bid_metrics/queue/*
 fi
