Changing the login url for identity-gateway to avoid collision with hosted apps which have a login url of "/login". Removing duplicated "env" node attribute

--- a/chef/cookbooks/identity-gateway/templates/default/etc/httpd/conf.d/identity-gateway.conf.erb
+++ b/chef/cookbooks/identity-gateway/templates/default/etc/httpd/conf.d/identity-gateway.conf.erb
@@ -3,7 +3,7 @@
 NameVirtualHost *:80
 <VirtualHost *:80>
     Include conf.d/mod_browserid.include
-    ServerName monitor.identity.<%= node[:aws_region] %>.<%= node[:env] %>.mozaws.net
+    ServerName monitor.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
     ProxyPass / <%= node[:persona][:identity_gateway][:monitor][:url][node[:aws_region]] %>
     ProxyPassReverse / <%= node[:persona][:identity_gateway][:monitor][:url][node[:aws_region]] %>
 
@@ -11,7 +11,7 @@ NameVirtualHost *:80
 
 <VirtualHost *:80>
     Include conf.d/mod_browserid.include
-    ServerName perf.identity.<%= node[:aws_region] %>.<%= node[:env] %>.mozaws.net
+    ServerName perf.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
     ProxyPass / <%= node[:persona][:identity_gateway][:perf][:url][node[:aws_region]] %>
     ProxyPassReverse / <%= node[:persona][:identity_gateway][:perf][:url][node[:aws_region]] %>
 </VirtualHost>
