moving the identity-gateway to https

--- a/chef/cookbooks/identity-gateway/templates/default/etc/httpd/conf.d/identity-gateway.conf.erb
+++ b/chef/cookbooks/identity-gateway/templates/default/etc/httpd/conf.d/identity-gateway.conf.erb
@@ -2,16 +2,80 @@
 
 NameVirtualHost *:80
 <VirtualHost *:80>
+    ServerName monitor.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
+    RedirectPermanent / "https://monitor.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net/"
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName perf.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
+    RedirectPermanent / "https://perf.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net/"
+</VirtualHost>
+
+LoadModule ssl_module modules/mod_ssl.so
+Listen 443
+SSLPassPhraseDialog  builtin
+SSLSessionCache         shmcb:/var/cache/mod_ssl/scache(512000)
+SSLSessionCacheTimeout  300
+SSLMutex default
+SSLRandomSeed startup file:/dev/urandom  256
+SSLRandomSeed connect builtin
+SSLCryptoDevice builtin
+
+NameVirtualHost *:443
+<VirtualHost *:443>
+    ErrorLog logs/ssl_error_log
+    TransferLog logs/ssl_access_log
+    LogLevel warn
+    SSLEngine on
+    SSLProtocol all -SSLv2
+    SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
+
+    SSLCertificateFile /etc/pki/tls/certs/identity-gateway.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/identity-gateway.key
+
+    <Files ~ "\.(cgi|shtml|phtml|php3?)$">
+        SSLOptions +StdEnvVars
+    </Files>
+    <Directory "/var/www/cgi-bin">
+        SSLOptions +StdEnvVars
+    </Directory>
+    SetEnvIf User-Agent ".*MSIE.*" \
+             nokeepalive ssl-unclean-shutdown \
+             downgrade-1.0 force-response-1.0
+    CustomLog logs/ssl_request_log \
+              "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+
     Include conf.d/mod_browserid.include
     ServerName monitor.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
     ProxyPass / <%= node[:persona][:identity_gateway][:monitor][:url][node[:aws_region]] %>
     ProxyPassReverse / <%= node[:persona][:identity_gateway][:monitor][:url][node[:aws_region]] %>
+</VirtualHost>                                  
 
-</VirtualHost>
+<VirtualHost *:443>
+    ErrorLog logs/ssl_error_log
+    TransferLog logs/ssl_access_log
+    LogLevel warn
+    SSLEngine on
+    SSLProtocol all -SSLv2
+    SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
 
-<VirtualHost *:80>
+    SSLCertificateFile /etc/pki/tls/certs/identity-gateway.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/identity-gateway.key
+
+    <Files ~ "\.(cgi|shtml|phtml|php3?)$">
+        SSLOptions +StdEnvVars
+    </Files>
+    <Directory "/var/www/cgi-bin">
+        SSLOptions +StdEnvVars
+    </Directory>
+    SetEnvIf User-Agent ".*MSIE.*" \
+             nokeepalive ssl-unclean-shutdown \
+             downgrade-1.0 force-response-1.0
+    CustomLog logs/ssl_request_log \
+              "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+
     Include conf.d/mod_browserid.include
     ServerName perf.identity.<%= node[:aws_region] %>.<%= node[:stack][:type] %>.mozaws.net
     ProxyPass / <%= node[:persona][:identity_gateway][:perf][:url][node[:aws_region]] %>
     ProxyPassReverse / <%= node[:persona][:identity_gateway][:perf][:url][node[:aws_region]] %>
-</VirtualHost>
+</VirtualHost>                                  
