The correlating change to this config file format change : https://github.com/mozilla/browserid/commit/971ec0999b29932ca452889f68712fb9f63588b9

--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -2,6 +2,7 @@
   "env": "production",
   "public_url": "<%= node[:persona][:public_url] %>",
   "public_static_url": "<%= node[:persona][:public_static_url] %>",
+  "firefoxos_url": "https://firefoxos.<%= @zone %>",
   "bind_to": {
     "host": "127.0.0.1"
   },
