adding code to accomodate certs with no intermediate

--- a/chef/cookbooks/persona-rootzone/templates/default/etc/httpd/conf.d/rootzone.conf.erb
+++ b/chef/cookbooks/persona-rootzone/templates/default/etc/httpd/conf.d/rootzone.conf.erb
@@ -60,8 +60,9 @@ when "www.browserid.org" %>
 <% end %>
       SSLCertificateFile /etc/pki/tls/certs/<%= x[:cert][:cert_name] %>.crt
       SSLCertificateKeyFile /etc/pki/tls/private/<%= x[:cert][:cert_name] %>.key
+<% if not x[:cert][:cert_chain].nil? %>
       SSLCertificateChainFile /etc/pki/tls/certs/<%= x[:cert][:cert_name] %>.chain.crt
-
+<% end %>
     SSLProxyCACertificateFile /etc/pki/tls/cert.pem
     SSLProxyCheckPeerCN off
     
