raise toobusy maximum_event_loop_lag to 1000ms

--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -16,6 +16,7 @@
   "bcrypt_work_factor": 12,
   "max_compute_processes": 0,
   "max_compute_duration": 10,
+  "maximum_event_loop_lag": 1000,
   "disable_primary_support": false,
   "enable_code_version": false,
   "default_lang": "en",
