Reverting config changes that we applied to move from 10.09 to 10.23 at 4a186cc79dd2a530ebd0fcf7f51aba977d0a176d https://bugzilla.mozilla.org/show_bug.cgi?id=965638#c5

--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -13,7 +13,7 @@
     "enabled": true
   },
   "bcrypt_work_factor": 12,
-  "max_compute_processes": 0,
+  "max_compute_processes": null,
   "max_compute_duration": 10,
   "maximum_event_loop_lag": 1000,
   "disable_primary_support": false,
