--- a/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-keysign/templates/default/opt/browserid/config/production.json.erb
@@ -13,7 +13,7 @@
     "enabled": true
   },
   "bcrypt_work_factor": 12,
-  "max_compute_processes": 0,
+  "max_compute_processes": null,
   "max_compute_duration": 10,
   "maximum_event_loop_lag": 1000,
   "disable_primary_support": false,
