Config changes to accomodate new logging options in https://github.com/mozilla/persona/pull/4090

--- a/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-dbwrite/templates/default/opt/browserid/config/production.json.erb
@@ -48,5 +48,6 @@
     "driver": "mysql",
     "name": "browserid",
     "create_schema": false
-  }
+  },
+  "winston_logging_maxsize": 104857600
 }
