--- a/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
+++ b/chef/cookbooks/persona-webhead/templates/default/opt/browserid/config/production.json.erb
@@ -53,5 +53,6 @@
     "driver": "mysql",
     "name": "browserid",
     "create_schema": false
-  }
+  },
+  "winston_logging_maxsize": 104857600
 }
